[project]
name = "screenshot-normaliser"
version = "0.1.0"
description = "Normalise screenshots to consistent dimensions by detecting & aligning app windows, by auto-cropping/padding the background."
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.scripts]
screenshot-normaliser = "normaliser:main"
