[project]
name = "screenshot-normaliser"
version = "0.2.0"
description = "Normalise screenshots to consistent dimensions by detecting & aligning app windows, and auto-cropping/padding the background."
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "numpy>=1.24",
    "rembg[cpu]>=2.0.50",
]

[project.scripts]
screenshot-normaliser = "normaliser:main"
